<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toTopOf="@id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="@id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button00"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_zero"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/basic_number_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@id/button00"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_8"
        app:cardCornerRadius="@dimen/corner_radius_48"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button9">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:padding="@dimen/spacing_32"
            app:tint="@color/white"
            android:src="@drawable/ic_baseline_backspace_24" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>