<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/hoursTv"
        style="@style/selected_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00" />

    <TextView
        android:id="@+id/hoursTitle"
        style="@style/selected_time_abbreviated_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_abbreviated_title" />

    <TextView
        android:id="@+id/minutesTv"
        style="@style/selected_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        tools:text="00" />

    <TextView
        android:id="@+id/minutesTitle"
        style="@style/selected_time_abbreviated_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_abbreviated_title" />

    <TextView
        android:id="@+id/secondsTv"
        style="@style/selected_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        tools:text="00" />

    <TextView
        android:id="@+id/secondsTitle"
        style="@style/selected_time_abbreviated_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds_abbreviated_title" />

</LinearLayout>